@@ -53,7 +53,7 @@
 			  <signal name="activate" handler="on_import_maps_activate" last_modification_time="Tue, 25 Jan 2005 19:06:57 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9537">
+			    <widget class="GtkImage" id="image9539">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -74,7 +74,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9538">
+			    <widget class="GtkImage" id="image9540">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -204,7 +204,7 @@
 			  <accelerator key="g" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image9539">
+			    <widget class="GtkImage" id="image9541">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-jump-to</property>
 			      <property name="icon_size">1</property>
@@ -288,6 +288,41 @@
 			  <property name="visible">True</property>
 			  <property name="stock_item">GNOMEUIINFO_MENU_ABOUT_ITEM</property>
 			  <signal name="activate" handler="on_aboutmenuitem_activate" last_modification_time="Fri, 03 Sep 2004 09:21:47 GMT"/>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+
+	      <child>
+		<widget class="GtkMenuItem" id="debugmenu">
+		  <property name="visible">True</property>
+		  <property name="label" translatable="yes">_Debug</property>
+		  <property name="use_underline">True</property>
+
+		  <child>
+		    <widget class="GtkMenu" id="debugmenu_menu">
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="reloadstylesmenuitem">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Reload Styles</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="on_reloadstylesmenuitem_activate" last_modification_time="Thu, 03 Mar 2005 07:25:08 GMT"/>
+			  <accelerator key="r" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image9542">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-refresh</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
 			</widget>
 		      </child>
 		    </widget>
