@@ -24,10 +24,7 @@
 #ifndef _WELCOMEWINDOW_H
 #define _WELCOMEWINDOW_H
 
-#ifdef __cplusplus
-extern "C"
-{
-#endif
+G_BEGIN_DECLS
 
 void welcomewindow_init(GladeXML* pGladeXML);
 void welcomewindow_show(void);
@@ -40,8 +37,6 @@ void welcomewindow_show(void);
 void welcomewindow_on_url_clicked(GtkWidget* pButton, gpointer data);
 void welcomewindow_on_okbutton_clicked(GtkWidget* pButton, gpointer data);
 
-#ifdef __cplusplus
-}
-#endif
+G_END_DECLS
 
 #endif /* _WELCOMEWINDOW_H */
